tests/neg/unselectable-fields.check
-- Error: tests/neg/unselectable-fields.scala:4:13 ---------------------------------------------------------------------
4 |val _ = foo1.xyz // error
  |        ^^^^^^^^
  |        Cannot use selectDynamic here since it it needs another selectDynamic to be invoked
